# mcp-guardrail-gateway

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: policy.example.yaml  redteam_cases.jsonl
reports/: security_report_example.md
src/mcp_guardrail/: __init__.py  audit.py  cli.py  config.py  detectors.py  evals.py  gateway.py  policy.py  ratelimit.py  redact.py  server.py  upstream.py
tests/: test_audit.py  test_cli.py  test_detectors.py  test_evals.py  test_gateway.py  test_policy.py  test_ratelimit.py  test_redact.py  test_server.py
